--- a/ISO1_PROYECTOPRACTICAS/.classpath
+++ b/ISO1_PROYECTOPRACTICAS/.classpath
@@ -18,6 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/derby-10.14.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ámbito académico/Documents/GitHub/Ingenieria_software1/ISO1_PROYECTOPRACTICAS/miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="C:/Users/pablo/Documents/GitHub/Ingenieria_software1/ISO1_PROYECTOPRACTICAS/miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
